<resources>
    <string name="app_name">RReservations</string>
    <string name="welcome_main">Welcome to the reservation system.</string>
    <string name="login_main">Login</string>
    <string name="login_text">Login with your username and password of RReservations</string>
    <string name="register_main">Register</string>
    <string name="register_text">First time here? Register now!</string>
    <string name="enter_name">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="re_enter_password">Enter your password again</string>
    <string name="enter_email">Enter your email</string>
    <string name="create_account">Create account</string>
    <string name="toast_password">Passwords don\'t match</string>
    <string name="reservation_main">Make reservation</string>
    <string name="toast_email">Email is invalid</string>
    <string name="empty_fields">Please fill all fields</string>
    <string name="reservation_text">Please enter the number of tables. people, hour and date for the reservation</string>
    <string name="reservation_commit">Reserve</string>
    <string name="name_txt">Enter your name</string>
    <string name="guests_number_txt">Enter number of diners</string>
    <string name="phone_txt">Enter your phone</string>
    <string name="reservation_succes">The reservation was created</string>
    <string name="toast_phone">Phone is invalid</string>
    <string name="main_body_txt">The reservation was created succesfully.</string>
    <string name="mail_subject">"Reservation for "</string>
    <string name="is_closed_txt">Restaurant is closed at that time</string>
    <string name="past_date_txt">Cannot reserve in the past</string>
</resources>
