<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/register_main"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text" />

        <EditText
            android:id="@+id/name_edit_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/password_edit_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/password_match_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/register_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:onClick="submitRegister"/>

    </LinearLayout>

</ScrollView>