<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservations">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/reservation_main"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_text"/>

        <EditText
            android:id="@+id/name_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name_txt"
            android:textSize="15sp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/phone_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_txt"
            android:textSize="15sp"
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guests_number_txt"/>

        <NumberPicker
            android:id="@+id/number_picker_guests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <DatePicker
            android:id="@+id/date_picker_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TimePicker
            android:id="@+id/time_picker_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"/>

        <Button
            android:id="@+id/reservation_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_commit"
            android:onClick="submitReservation"/>

    </LinearLayout>

</ScrollView>