<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".Login">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:gravity="center">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:textStyle="bold"
              android:text="@string/login_main"
              android:textAllCaps="true"/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/login_text" />

          <EditText
              android:id="@+id/name_edit_id"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:hint="@string/enter_name"
              android:inputType="text"
              android:textSize="12sp" />

          <EditText
              android:id="@+id/password_edit_id"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:hint="@string/enter_password"
              android:inputType="textPassword"
              android:textSize="12sp"/>

          <Button
              android:id="@+id/login_button_id"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/login_main"
              android:onClick="submitLogin"/>

     </LinearLayout>

</ScrollView>